--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="resume.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кудрявцева Ольга, резюме</title>
   </head>
   <body>
